@@ -1,3 +1,8 @@
+Mon Apr 27 02:09:09 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/ast/DefinedFunction.java: remove unused
+	  method #epilogueLabel.
+
 Mon Apr 27 02:04:26 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/asm/Type.java: new class representing
